--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intl: ^0.18.1
   google_fonts: ^4.0.4
   postgres: ^2.6.2
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
