--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,7 @@
     "tuple": "c",
     "vector": "c"
   },
-  "idf.adapterTargetName": "esp32"
+  "idf.adapterTargetName": "esp32",
+  "idf.port": "/dev/cu.usbserial-1130",
+  "idf.flashType": "UART"
 }
